# freezer-android

./: .gitignore  .gitmodules  CMakeLists.txt  FreezerConfig.h.in  README.md  build.sh  cmake-linux.sh  main.cpp
src/: CMakeLists.txt  main.cpp
src/Resources/: CMakeLists.txt  qml.qrc
src/Resources/ui/: main.qml
src/model/: CMakeLists.txt  Model.cpp  Model.h  Model_callbacks.h  Model_types.h
src/model/freezer/: CMakeLists.txt  Freezer.cpp  Freezer.h  Item.cpp  Item.h
src/model/user/: CMakeLists.txt  User.cpp  User.h  User_callbacks.h  User_types.h
src/model/user/freezer/: CMakeLists.txt  Freezer.cpp  Freezer.h  Item.h
src/presenter/: CMakeLists.txt  MainPresenter.cpp  MainPresenter.h
src/view/: CMakeLists.txt  FilterFreezerPage.cpp  FilterFreezerPage.h  FreezerPageModel.cpp  FreezerPageModel.h  ItemDialog.cpp  ItemDialog.h  ItemViewData.cpp  ItemViewData.h  MainWindow.cpp  MainWindow.h  qml.qrc
src/view/ui/: FreezerPage.qml  ItemPage.qml  itemdialog.ui  main.qml  mainwindow.ui
tests/src/: CMakeLists.txt  main.cpp
tests/src/model/: CMakeLists.txt
tests/src/model/freezer/: CMakeLists.txt  Freezer_test.cpp
